fixed text-align on card-header

--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -54,3 +54,7 @@ main {
 .card-footer {
   padding: 0.2rem;
 }
+
+.card-header {
+  text-align: center;
+}
